--- a/public/index.html
+++ b/public/index.html
@@ -11,133 +11,58 @@
 <meta property="og:url" content="https://triggui.com" />
 <meta property="og:type" content="website" />
 
-<!-- Twitter Card (opcional pero útil) -->
+<!-- Twitter Card (opcional) -->
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:title" content="Triggui – Abre un libro físico. Aquí y ahora." />
 <meta name="twitter:description" content="Un impulso real. Nada más. Nada menos." />
 <meta name="twitter:image" content="https://triggui.com/imagotipo.png" />
-  
+
 <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&family=Poppins:wght@500;800&display=swap" rel="stylesheet">
 <style>
-* { margin: 0; padding: 0; box-sizing: border-box; }
-html, body {
-  height: 100%;
-  font-family: 'Archivo', sans-serif;
-  background: #0e0f1b;
-  color: #fff;
-  -webkit-overflow-scrolling: touch;
-}
+*{margin:0;padding:0;box-sizing:border-box}
+html,body{height:100%;font-family:'Archivo',sans-serif;background:#0e0f1b;color:#fff;-webkit-overflow-scrolling:touch}
 
 /* Intro */
-.intro {
-  position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%);
-  padding: 2.2rem 2.8rem; background: #191e32; border-radius: 24px; z-index: 120;
-  font-family: 'Poppins'; font-size: 2rem; font-weight: 700; text-align: center;
-  box-shadow: 0 0 16px rgba(48,255,228,.32);
-  animation: introHide 2.2s 1s forwards;
-}
-@keyframes introHide {
-  to { opacity: 0; visibility: hidden; transform: translate(-50%, -80%); }
-}
+.intro{position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);padding:2.2rem 2.8rem;background:#191e32;border-radius:24px;z-index:120;font-family:'Poppins';font-size:2rem;font-weight:700;text-align:center;box-shadow:0 0 16px rgba(48,255,228,.32);animation:introHide 2.2s 1s forwards}
+@keyframes introHide{to{opacity:0;visibility:hidden;transform:translate(-50%,-80%)}}
 
 /* Grid */
-.grid {
-  position: absolute; inset: 5vh 1.5vw; display: grid; gap: 1vw;
-}
-@media (orientation: landscape) {
-  .grid { grid-template-columns: repeat(4, 1fr); }
-}
-@media (orientation: portrait) {
-  .grid { grid-template-columns: repeat(2, 1fr); grid-template-rows: repeat(2, 1fr); }
-}
+.grid{position:absolute;inset:5vh 1.5vw;display:grid;gap:1vw}
+@media(orientation:landscape){.grid{grid-template-columns:repeat(4,1fr)}}
+@media(orientation:portrait){.grid{grid-template-columns:repeat(2,1fr);grid-template-rows:repeat(2,1fr)}}
 
 /* Blocks */
-.block {
-  position: relative; display: flex; align-items: center; justify-content: center;
-  padding: 1rem; border-radius: 22px; font-weight: 700; cursor: pointer;
-  background-size: 320% 320%; transition: background-position 4s; overflow: hidden;
-}
-.block:hover { background-position: 100% 100%; }
-.block::before {
-  content: ""; position: absolute; inset: 0; border-radius: inherit;
-  background: linear-gradient(180deg, rgba(255,255,255,.18), transparent 65%);
-  mix-blend-mode: overlay;
-}
-.label, .frase { z-index: 2; text-align: center; color: inherit; }
-.frase {
-  position: absolute; inset: 0; display: flex; align-items: center; justify-content: center;
-  padding: 1rem; opacity: 0; transition: opacity .25s;
-}
-.block.show .label { opacity: 0; }
-.block.show .frase { opacity: 1; }
+.block{position:relative;display:flex;align-items:center;justify-content:center;padding:1rem;border-radius:22px;font-weight:700;cursor:pointer;background-size:320% 320%;transition:background-position 4s;overflow:hidden}
+.block:hover{background-position:100% 100%}
+.block::before{content:"";position:absolute;inset:0;border-radius:inherit;background:linear-gradient(180deg,rgba(255,255,255,.18),transparent 65%);mix-blend-mode:overlay}
+.label,.frase{z-index:2;text-align:center;color:inherit}
+.frase{position:absolute;inset:0;display:flex;align-items:center;justify-content:center;padding:1rem;opacity:0;transition:opacity .25s}
+.block.show .label{opacity:0}
+.block.show .frase{opacity:1}
 
 /* Portada */
-.portada {
-  position: absolute; inset: 0; display: none;
-  align-items: center; justify-content: center; flex-direction: column;
-  padding: 1rem; gap: .4rem; text-align: center;
-  animation: pop .6s ease-out forwards; max-height: 90%; overflow: hidden;
-}
-@keyframes pop {
-  0% { transform: scale(.8); opacity: 0; }
-  100% { transform: scale(1); opacity: 1; }
-}
-.portada img {
-  max-width: 94%; max-height: 76%; border-radius: 18px;
-  box-shadow: 0 12px 32px rgba(0,0,0,.55);
-}
+.portada{position:absolute;inset:0;display:none;align-items:center;justify-content:center;flex-direction:column;padding:1rem;gap:.4rem;text-align:center;animation:pop .6s ease-out forwards;max-height:90%;overflow:hidden}
+@keyframes pop{0%{transform:scale(.8);opacity:0}100%{transform:scale(1);opacity:1}}
+.portada img{max-width:94%;max-height:76%;border-radius:18px;box-shadow:0 12px 32px rgba(0,0,0,.55)}
 
 /* Zoom animación para portada */
-.port-text h2, .port-text p, .emoji-big {
-  animation: settle 0.6s ease-out forwards;
-  opacity: 0;
-}
-@keyframes settle {
-  0%   { transform: scale(1.25); opacity: 0; }
-  100% { transform: scale(1);    opacity: 1; }
-}
+.port-text h2,.port-text p,.emoji-big{animation:settle 0.6s ease-out forwards;opacity:0}
+@keyframes settle{0%{transform:scale(1.25);opacity:0}100%{transform:scale(1);opacity:1}}
+.port-text h2{font-size:clamp(2.8rem,7vw,4rem);font-weight:800;line-height:1.15;text-shadow:0 2px 6px rgba(0,0,0,.35)}
+.port-text p{font-size:clamp(1.5rem,4vw,2.2rem);font-weight:600;opacity:.9;margin-top:.3rem}
+.emoji-big{font-size:clamp(1.6rem,5vw,2.8rem);filter:drop-shadow(0 4px 8px rgba(0,0,0,.3))}
 
-.port-text h2 {
-  font-size: clamp(2.8rem, 7vw, 4rem);
-  font-weight: 800; line-height: 1.15;
-  text-shadow: 0 2px 6px rgba(0,0,0,.35);
-}
-.port-text p {
-  font-size: clamp(1.5rem, 4vw, 2.2rem);
-  font-weight: 600; opacity: .9; margin-top: .3rem;
-}
-.emoji-big {
-  font-size: clamp(1.6rem, 5vw, 2.8rem);
-  filter: drop-shadow(0 4px 8px rgba(0,0,0,.3));
-}
-
-/* CTA */
-.cta {
-  position: fixed; bottom: 3vh; left: 50%; transform: translateX(-50%);
-  display: none; gap: 1rem; z-index: 100;
-}
-.cta button {
-  border: none; padding: .55rem 1.15rem; border-radius: 999px;
-  font-size: .85rem; font-weight: 600; font-family: 'Archivo', sans-serif;
-  cursor: pointer; transition: all 0.25s ease; box-shadow: 0 4px 12px rgba(0,0,0,0.12);
-  letter-spacing: 0.3px;
-}
-#otro { background: linear-gradient(135deg, #5fbfff, #1e90ff); color: #fff; }
-#fisico { background: linear-gradient(135deg, #b2f8c8, #42d97c); color: #0c2d1b; }
-.cta button:hover {
-  filter: brightness(1.15); transform: translateY(-1px);
-}
+/* CTA: botones 100 % uniformes */
+.cta{position:fixed;bottom:3vh;left:50%;transform:translateX(-50%);display:none;gap:1rem;z-index:100;width:min(90vw,440px)}
+.cta button{flex:1 1 0;display:flex;align-items:center;justify-content:center;width:100%;border:none;padding:.68rem 1rem;border-radius:999px;font-size:.9rem;font-weight:600;font-family:'Archivo',sans-serif;cursor:pointer;transition:all .25s ease;box-shadow:0 4px 12px rgba(0,0,0,.12);letter-spacing:.3px;white-space:nowrap}
+#otro{background:linear-gradient(135deg,#5fbfff,#1e90ff);color:#fff}
+#fisico{background:linear-gradient(135deg,#b2f8c8,#42d97c);color:#0c2d1b}
+.cta button:hover{filter:brightness(1.15);transform:translateY(-1px)}
 
 /* Celebración */
-.cele {
-  position: fixed; inset: 0; background: rgba(0,0,0,.88);
-  display: none; align-items: center; justify-content: center; z-index: 110;
-}
-.cele-msg {
-  font-family: 'Poppins'; font-size: 2rem; text-align: center;
-  background: rgba(255,255,255,.05); padding: 2rem 3rem; border-radius: 20px;
-}
-.num { color: #30ffe4; font-weight: 900; font-size: 2.8rem; }
+.cele{position:fixed;inset:0;background:rgba(0,0,0,.88);display:none;align-items:center;justify-content:center;z-index:110}
+.cele-msg{font-family:'Poppins';font-size:2rem;text-align:center;background:rgba(255,255,255,.05);padding:2rem 3rem;border-radius:20px}
+.num{color:#30ffe4;font-weight:900;font-size:2.8rem}
 </style>
 </head>
 <body>
@@ -153,135 +78,94 @@ html, body {
 <div class="cele" id="cele"><div class="cele-msg" id="celeMsg">✨ <span class="num">...</span><br>libros físicos abiertos</div></div>
 
 <script>
-const grid = document.getElementById("grid"),
-      cta = document.getElementById("cta"),
-      btnOtro = document.getElementById("otro"),
-      btnLibro = document.getElementById("fisico"),
-      cele = document.getElementById("cele"),
-      celeMsg = document.getElementById("celeMsg");
+const grid=document.getElementById("grid"),
+      cta=document.getElementById("cta"),
+      btnOtro=document.getElementById("otro"),
+      btnLibro=document.getElementById("fisico"),
+      cele=document.getElementById("cele"),
+      celeMsg=document.getElementById("celeMsg");
 
-let libro = null, revealed = false;
-const portIdx = Math.floor(Math.random() * 4);
-const emojis = ["🌊", "🛡️", "🧠", "✨", "📘", "🔮", "❤️", "🪞"];
-const isURL = s => /^https?:\/\//i.test(s || "");
-const grad = i => `linear-gradient(135deg,${libro.colores[i]},${libro.colores[(i + 1) % 4]})`;
+let libro=null,revealed=false;
+const portIdx=Math.floor(Math.random()*4),
+      emojis=["🌊","🛡️","🧠","✨","📘","🔮","❤️","🪞"],
+      isURL=s=>/^https?:\/\//i.test(s||""),
+      grad=i=>`linear-gradient(135deg,${libro.colores[i]},${libro.colores[(i+1)%4]})`;
 
-function adjustScale(wrap) {
-  const parent = wrap.closest(".portada");
-  if (!parent) return;
-  const available = parent.clientHeight - 40;
-  let scale = 1;
-  wrap.style.transform = "scale(1)";
-  while (wrap.scrollHeight > available && scale > 0.55) {
-    scale -= 0.02;
-    wrap.style.transform = `scale(${scale})`;
+function adjustScale(wrap){
+  const parent=wrap.closest(".portada");if(!parent)return;
+  const available=parent.clientHeight-40;let scale=1;
+  wrap.style.transform="scale(1)";
+  while(wrap.scrollHeight>available&&scale>0.55){
+    scale-=0.02;wrap.style.transform=`scale(${scale})`;
   }
 }
 
-function buildPort(i) {
-  const d = document.createElement("div");
-  d.className = "portada";
-
-  const wrap = document.createElement("div");
-  wrap.className = "port-text-wrap";
-
-  const box = document.createElement("div");
-  box.className = "port-text";
-  box.innerHTML = `<h2>${libro.titulo}</h2><p>${libro.autor}</p>`;
-
-  const emoji = document.createElement("div");
-  emoji.className = "emoji-big";
-  emoji.textContent = emojis[i % emojis.length];
-
-  wrap.appendChild(box);
-  wrap.appendChild(emoji);
-
-  if (isURL(libro.portada)) {
-    d.append(Object.assign(new Image(), { src: libro.portada, loading: "lazy" }));
-  } else {
-    d.append(wrap);
-    setTimeout(() => adjustScale(wrap), 0);
+function buildPort(i){
+  const d=document.createElement("div");d.className="portada";
+  const wrap=document.createElement("div");wrap.className="port-text-wrap";
+  const box=document.createElement("div");box.className="port-text";
+  box.innerHTML=`<h2>${libro.titulo}</h2><p>${libro.autor}</p>`;
+  const emoji=document.createElement("div");emoji.className="emoji-big";
+  emoji.textContent=emojis[i%emojis.length];
+  wrap.append(box,emoji);
+  if(isURL(libro.portada)){
+    d.append(Object.assign(new Image(),{src:libro.portada,loading:"lazy"}));
+  }else{
+    d.append(wrap);setTimeout(()=>adjustScale(wrap),0);
   }
-
   return d;
 }
 
-function render() {
-  grid.innerHTML = "";
-  for (let i = 0; i < 4; i++) {
-    const card = document.createElement("div");
-    card.className = "block";
-    card.dataset.i = i;
-    card.style.background = grad(i);
-
-    const label = Object.assign(document.createElement("div"), {
-      className: "label",
-      textContent: `${emojis[i % emojis.length]} ${libro.palabras[i]}`,
-      style: `color: ${libro.textColors?.[i] || "#fff"}`
+function render(){
+  grid.innerHTML="";
+  for(let i=0;i<4;i++){
+    const card=document.createElement("div");
+    card.className="block";card.dataset.i=i;card.style.background=grad(i);
+    const label=Object.assign(document.createElement("div"),{
+      className:"label",
+      textContent:`${emojis[i%emojis.length]} ${libro.palabras[i]}`,
+      style:`color:${libro.textColors?.[i]||"#fff"}`
     });
-
-    const frase = Object.assign(document.createElement("div"), {
-      className: "frase",
-      textContent: libro.frases[i],
-      style: `color: ${libro.textColors?.[i] || "#fff"}`
+    const frase=Object.assign(document.createElement("div"),{
+      className:"frase",
+      textContent:libro.frases[i],
+      style:`color:${libro.textColors?.[i]||"#fff"}`
     });
-
-    const port = buildPort(i);
-    if (i === portIdx) card.append(port);
-    card.append(label, frase);
-    card.onclick = () => handleClick(card, i, port, label);
+    const port=buildPort(i);
+    if(i===portIdx)card.append(port);
+    card.append(label,frase);
+    card.onclick=()=>handleClick(card,i,port,label);
     grid.append(card);
   }
 }
 
-function handleClick(card, i, port, label) {
-  /* 1. Si ya se reveló, cualquier clic (incluyendo la portada) reinicia */
-  if (revealed) return location.reload();
-
-  /* 2. Primer clic en la tarjeta con portada: revela y muestra CTA */
-  if (i === portIdx && !revealed) {
-    label.style.display = "none";
-    port.style.display = "flex";
-    [...grid.children].forEach((c, j) => j !== portIdx && c.classList.add("show"));
-    cta.style.display = "flex";
-    revealed = true;
-  } 
-  /* 3. Clics antes de revelar: alternan entre palabra y frase */
-  else if (!revealed) {
-    card.classList.toggle("show");
-  }
+function handleClick(card,i,port,label){
+  if(revealed)return location.reload();         /* Reinicia con cualquier clic */
+  if(i===portIdx){                              /* Revelar portada  */
+    label.style.display="none";port.style.display="flex";
+    [...grid.children].forEach((c,j)=>j!==portIdx&&c.classList.add("show"));
+    cta.style.display="flex";revealed=true;
+  }else{ card.classList.toggle("show"); }       /* Alternar palabra / frase   */
 }
 
-btnOtro.onclick = () => window.open("https://donate.stripe.com/eVqaEX1JD9oB0yE55H0oM03", "_blank");
+btnOtro.onclick=()=>window.open("https://donate.stripe.com/eVqaEX1JD9oB0yE55H0oM03","_blank");
 
-btnLibro.onclick = async () => {
-  btnLibro.disabled = true;
-  cele.style.display = "flex";
-  celeMsg.innerHTML = '✨ <span class="num">...</span><br>libros físicos abiertos';
-  try {
-    const r = await fetch("https://triggui-api.vercel.app/api/increment");
-    const d = await r.json();
-    celeMsg.innerHTML = `✨ <span class="num">${d.total.toLocaleString("es-MX")}</span><br>libros físicos abiertos`;
-  } catch {
-    celeMsg.textContent = "📚 Error al contar libros";
-  }
-  setTimeout(() => {
-    cele.style.display = "none";
-    cta.style.display = "flex";
-    btnLibro.disabled = false;
-  }, 2300);
+btnLibro.onclick=async()=>{
+  btnLibro.disabled=true;cele.style.display="flex";
+  celeMsg.innerHTML='✨ <span class="num">...</span><br>libros físicos abiertos';
+  try{
+    const r=await fetch("https://triggui-api.vercel.app/api/increment");
+    const d=await r.json();
+    celeMsg.innerHTML=`✨ <span class="num">${d.total.toLocaleString("es-MX")}</span><br>libros físicos abiertos`;
+  }catch{celeMsg.textContent="📚 Error al contar libros"}
+  setTimeout(()=>{cele.style.display="none";cta.style.display="flex";btnLibro.disabled=false},2300);
 };
 
-(async () => {
-  try {
-    const r = await fetch("https://raw.githubusercontent.com/badirnakid/triggui-content/main/contenido.json?ts=" + Date.now());
-    const data = await r.json();
-    libro = data.libros[Math.floor(Math.random() * data.libros.length)];
-    render();
-  } catch (e) {
-    alert("No se pudo cargar Triggui.");
-    console.error(e);
-  }
+(async()=>{
+  try{
+    const r=await fetch("https://raw.githubusercontent.com/badirnakid/triggui-content/main/contenido.json?ts="+Date.now());
+    const data=await r.json();libro=data.libros[Math.floor(Math.random()*data.libros.length)];render();
+  }catch(e){alert("No se pudo cargar Triggui.");console.error(e);}
 })();
 </script>
 </body>
